# yew-shortcuts

./: .gitignore  Cargo.toml  ICONS.md  README.md  context7.json  demo-337587d21885cd8b.js  demo-337587d21885cd8b_bg.wasm  demo-44f6d69183e3e735_bg.wasm  demo-b384d3cb9489facf.js  demo-b384d3cb9489facf_bg.wasm  demo-c4da78ff145aec44_bg.wasm  demo-e56fa320519b2268.js  demo-e56fa320519b2268_bg.wasm  demo-e5ccad7bfb494d70.js  demo-e5ccad7bfb494d70_bg.wasm  demo-f8452f86ec500999.js  demo-f8452f86ec500999_bg.wasm  deploy-demo.sh  index.html
.github/workflows/: deploy-demo.yml
demo/: Cargo.toml  build.rs  index.html
demo/src/: all_icons.rs  app.rs  main.rs
icon-processor/: Cargo.toml
icon-processor/src/: main.rs
mcp-icon-server/: Cargo.toml  install.sh
mcp-icon-server/src/: icon_index.rs  main.rs  server.rs  types.rs
mcp-icon-server/src/tools/: code_gen.rs  details.rs  mod.rs  search.rs
scripts/: add_missing_icons.py  find_icons.py  found_icons.txt  generate_all_icons.py  generate_fontawesome.py  generate_fontawesome_v2.py  generate_icon_list_for_demo.py  icon_mapping.txt  icon_mapping_v2.txt  migrate_fontawesome.py
src/: lib.rs
yew-shortcuts/: Cargo.toml
yew-shortcuts-macros/: Cargo.toml
yew-shortcuts/src/: component.rs  fontawesome.rs  lib.rs
