[workspace]
members = ["yew-shortcuts-macros", "yew-shortcuts"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["mattsy1999@gmail.com"]
repository = "https://github.com/Madoshakalaka/yew-shortcuts"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
yew = "0.21"