[workspace]
members = [
    "demo",
    "yew-shortcuts",
    "yew-shortcuts-macros",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["mattsy1999@gmail.com"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Madoshakalaka/yew-shortcuts"
edition = "2021"

[workspace.dependencies]
proc-macro2 = "1.0"
quote = "1.0"
yew = "0.21"

[workspace.dependencies.syn]
version = "2.0"
features = [
    "full",
    "extra-traits",
]
