[package]
name = "demo"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = {workspace = true, features = ["csr"]}
yew-shortcuts = { path = "../yew-shortcuts", features = ["full-svg"] }
yew-html-ext = {git = "https://github.com/Madoshakalaka/yew-html-ext" }
js-sys = "0.3.66"
web-sys = { version = "0.3", features = ["HtmlInputElement", "Window", "Navigator", "Clipboard"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo = { version = "0.11", features = ["timers", "futures"] }
stylist = { git = "https://github.com/WorldSEnder/stylist.git", branch="name-lint", features = ["yew_integration", "yew_use_media_query"] }

